HW4/javali_tests/others/new/HW3_MarLin/type_error/array/OkArrays.javali
class A {

}

class B extends A {

}

class Main {

   void main() {
      A[] a;
      B[] b;
      int[] i;
      boolean[] bools;
      
      a = new A[1];
      b = new B[1];
      i = new int[2];
      bools = new boolean[2];
      
      b[0] = new B();
      a[0] = b[0];
      i[0] = 1;
      i[1] = i[0] + 1;
      bools[0] = true;
      bools[1] = bools[0] && false;
   }
}
